# vesc_current_control

./: README.md  package.xml  setup.cfg  setup.py
config/: speed_pid.yaml  vesc_config.yaml
docs/: 2026-06-16-realcar-debug.md  USAGE.md
docs/vesc_configs/: README.md  appconf-2026-06-16.xml  mcconf-2026-06-16.xml
launch/: bench_real.launch.py  fake_test.launch.py  speed_pid_current.launch.py
vesc_current_control/: bench_console.py  bench_gui.py  fake_vesc.py  speed_pid_to_current.py
